# meeting-agent

./: .gitignore  README.md
backend/: Dockerfile  agent.py  database.py  main.py  meetings.db  pyproject.toml  test_agent.py  transcribe.py
backend/tools/: __init__.py  action_items.py  calendar_invite.py  decision_record.py  email_summary.py  report.py  sentiment.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: AudioRecorder.tsx  MeetingHistory.tsx  ResultsPanel.tsx  TranscriptInput.tsx
